# kamikaze-agent

./: README.md  setup.cfg  setup.py
kamikaze/: newrelic.py
