[metadata]
name = geekie-kamikaze-agent
version = 1.0.0

[options]
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, !=3.6.*, !=3.7.*
install_requires =
  requests>=2.26,<3

[flake8]
max-line-length = 88
ignore = E203, E501, W503, B903, B950
select = B,E,F,W,B9,ISC
per-file-ignores = __init__.py:F401
